[gd_scene load_steps=14 format=3 uid="uid://tk5g0ala1164"]

[ext_resource type="Script" path="res://menus/options.gd" id="1_goyyf"]
[ext_resource type="Texture2D" uid="uid://dmfe1qw2nb730" path="res://assets/ui/PauseBackground.png" id="1_ykugq"]
[ext_resource type="Texture2D" uid="uid://bykbfurx53013" path="res://assets/urban/UrbanPastForeground.png" id="3_a0uy7"]
[ext_resource type="Script" path="res://menus/ParallaxBackgroundMenu.gd" id="3_cdquq"]
[ext_resource type="Texture2D" uid="uid://28a3ln3nq3x6" path="res://assets/urban/UrbanPastMidground.png" id="4_gixj2"]
[ext_resource type="Texture2D" uid="uid://bj4jg075ifx5k" path="res://assets/other/ClearSky.png" id="5_ky3nc"]
[ext_resource type="FontFile" uid="uid://xhm4fgfaoitd" path="res://assets/ui/retro_computer_font.ttf" id="9_q1wwx"]
[ext_resource type="Texture2D" uid="uid://deovb0au6qafk" path="res://assets/ui/isoff.png" id="10_x3kep"]
[ext_resource type="Texture2D" uid="uid://bdeqnkj6pm0b4" path="res://assets/ui/isoff2.png" id="11_egvqg"]
[ext_resource type="Texture2D" uid="uid://bcde48ypn55vo" path="res://assets/ui/ison.png" id="11_njpp1"]
[ext_resource type="Texture2D" uid="uid://noyrt5e53xxw" path="res://assets/ui/menubuttons/BackButtonNormal.png" id="19_ssfd1"]
[ext_resource type="Texture2D" uid="uid://b6hp6n7s423jk" path="res://assets/ui/menubuttons/BackButtonPressed.png" id="20_55o0f"]
[ext_resource type="Texture2D" uid="uid://sm0qeiikmvu8" path="res://assets/ui/menubuttons/BackButtonHover.png" id="21_5liua"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goyyf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_ykugq")

[node name="ParallaxBackgroundMenu" type="ParallaxBackground" parent="."]
follow_viewport_scale = 0.01
script = ExtResource("3_cdquq")

[node name="ParallaxLayerForeground" type="ParallaxLayer" parent="ParallaxBackgroundMenu"]
position = Vector2(-11, 1080)
motion_scale = Vector2(0.85, 0.85)

[node name="ForegroundTexture" type="TextureRect" parent="ParallaxBackgroundMenu/ParallaxLayerForeground"]
offset_left = -25040.0
offset_top = -1073.33
offset_right = 21069.0
offset_bottom = 6.66602
texture = ExtResource("3_a0uy7")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayerMidground" type="ParallaxLayer" parent="ParallaxBackgroundMenu"]
z_index = -1
position = Vector2(-11, 1080)
motion_scale = Vector2(0.75, 0.75)

[node name="MidgroundTexture" type="TextureRect" parent="ParallaxBackgroundMenu/ParallaxLayerMidground"]
offset_left = -25040.0
offset_top = -1073.33
offset_right = 21069.0
offset_bottom = 6.66602
texture = ExtResource("4_gixj2")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayerBackground" type="ParallaxLayer" parent="ParallaxBackgroundMenu"]
z_index = -2
position = Vector2(-11, 1080)

[node name="BackgroundTexture" type="TextureRect" parent="ParallaxBackgroundMenu/ParallaxLayerBackground"]
offset_left = -24736.0
offset_top = -4706.0
offset_right = 21373.0
offset_bottom = 1527.0
texture = ExtResource("5_ky3nc")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 752.0
offset_right = 278.0
offset_bottom = 1072.0
texture_normal = ExtResource("19_ssfd1")
texture_pressed = ExtResource("20_55o0f")
texture_hover = ExtResource("21_5liua")

[node name="LabelRain" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 442.0
offset_bottom = 247.0
theme_override_fonts/normal_font = ExtResource("9_q1wwx")
theme_override_font_sizes/normal_font_size = 100
text = "Rain"

[node name="Rain Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 119.0
offset_right = 526.0
offset_bottom = 183.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("10_x3kep")
texture_pressed = ExtResource("11_njpp1")
texture_hover = ExtResource("11_egvqg")

[node name="LabelFullscreen" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 200.0
offset_right = 960.0
offset_bottom = 367.0
theme_override_fonts/normal_font = ExtResource("9_q1wwx")
theme_override_font_sizes/normal_font_size = 100
text = "Fullscreen"

[node name="FullscreenButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 938.0
offset_top = 239.0
offset_right = 1022.0
offset_bottom = 303.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("10_x3kep")
texture_pressed = ExtResource("11_njpp1")
texture_hover = ExtResource("11_egvqg")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="Rain Button" to="." method="_on_rain_button_toggled"]
[connection signal="toggled" from="FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
